# coding_challenge

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dotenv_example  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_25_1746-e130d897e55f_create_users_table.py  2026_02_25_1752-2065c70a4d8d_create_addresses_table.py
src/: main.py
src/core/: app_logging.py  config.py  db.py  exception_handlers.py  exceptions.py  lifespan.py  middleware.py  utils.py
src/models/: address.py  user.py
src/repositories/: users.py
src/routes/: health.py  users.py
src/schemas/: users.py
src/services/: users.py
tests/: conftest.py  factories.py
tests/acceptance/: test_health.py
tests/acceptance/users/: test_create_users.py  test_delete_users.py  test_read_users.py  test_update_users.py
